--- a/ingles/radios.html
+++ b/ingles/radios.html
@@ -57,58 +57,6 @@
 	<style type="text/css">
 	#musica {height:0;width:0;}
 	</style>
-
-	<script>
-	// Array con todas las imágenes que deseamos que se vayan cambiando a
-	// cada clic
-	var imagenes=Array("images/icons/image1.png","images/icons/image2.png");
-	var imagenVisible=0;
- 
-	// Función que cambia la imagen actual por la siguiente
-	function cambiar(img)
-	{
-		imagenVisible++;
-		if(imagenVisible>=imagenes.length)
-		{
-			imagenVisible=0;
-		}
-		img.src=imagenes[imagenVisible];
-		cargarSiguienteImagen();
-	}
- 
-	/**
-	 * Esta función carga la siguiente imagen para no tener que esperar su carga
-	 * en el momento de mostrarla.
-	 */
-	function cargarSiguienteImagen()
-	{
-		if((imagenVisible+1)<imagenes.length)
-		{
-			console.log(imagenVisible+1);
-			var imgTmp=new Image();
-			imgTmp.src=imagenes[imagenVisible+1];
-		}
-	}
- 
-	window.onload=function() {
-		cargarSiguienteImagen();
-	}
-	
-	
-	
-	
-	function openAudio(word){
-			
-		    var imagen = document.getElementById('imagen').src;
-			var flag = "0";
-			if (imagen.includes('1')){
-				flag = 1;
-			} else {
-				flag = 0;
-			}			
-		}
-		
-	</script>
 	
 	<style>
 	img {cursor:pointer;}
@@ -173,12 +121,23 @@
 	<body>
 
 	<section>
-	<div style="background: #00a7a3; height:50px;">
-				<!-- <div class="row"> -->
-			<div class="search">
-			  <input id="search" class="search-input"  type="text"> <i style="color:white;" class="icon-search2" aria-hidden="true"></i>
-			</div> 
-    </div>
+		<div class="" style="background: #00a7a3; height:50px;">
+			<div class="container">
+				<li class="multilang">
+					<a href="#" data-nav-section="idiomas">
+						<select name="lang" class="jflanguageselection" size="1" onchange="document.location.replace(this.value);">
+							<option value="../mapa.html">Español</option>
+							<option value="mapa.html" selected="selected">English</option>
+							<option value="../quechua/mapa.html">Quechua</option>
+						</select>
+					</a> 
+				</li>
+				<li class="suscripcion">
+					<a href="suscripcion.html" class="btn btn-primary ">Suscribete</a>
+				</li>
+				
+			</div>
+		</div>
 	</section>
 	<header role="banner" id="fh5co-header">
 
@@ -200,15 +159,7 @@
 						<li><a href="#" data-nav-section="testimonials"><span>Inspiration</span></a></li>
 						<li class="active"><a href="#" data-nav-section="services"><span>Projects</span></a></li>
 						<li><a href="#" data-nav-section="about"><span>We are</span></a></li>
-						<li><a href="#" data-nav-section="eventos"><span>Events</span></a></li>
-						<li class="multilang"><a href="#" data-nav-section="idiomas">
-							<select name="lang" class="jflanguageselection" size="1" onchange="document.location.replace(this.value);">
-								<option value="../mapa.html">Español</option>
-								<option value="mapa.html" selected="selected">English</option>
-								<option value="../quechua/mapa.html">Quechua</option>
-							</select></a> 
-						</li>
-						<li><img id="imagen" src="../images/icons/image1.png" onclick="cambiar(this);" class="img-responsive; background-position:center; " style="width:20px; height:20px; margin-top: 20px;"></li>
+						<li><a href="#" data-nav-section="eventos"><span>Events</span></a></li>		
 					  </ul>
 		        </div>
 			</nav>
@@ -229,11 +180,10 @@ function openSection(texto){
 	
 <section id="fh5co-home" data-section="services" style="height: 100%; background-size: cover; background-attachment: fixed; background-position: center; background-repeat:no-repeat; min-height: 20px; ">
 		
-
 <div class="work-overlay"> </div>
 		<div class="container">
 			<br>
-<article class="col-lg-12  col-md-12  col-sm-12  col-xs-12">
+<article class="col-lg-12  col-md-6  col-sm-8  col-xs-12">
 			<div class="row">
 				<div class="col-md-12 section-heading text-center" style="margin-bottom: 10px;">
 				<br>
@@ -249,7 +199,7 @@ function openSection(texto){
 			
 			
 		
-			<table class="table table-hover table-striped  table-condensed">
+			<table class="table table-hover table-striped  table-condensed col-lg-12  col-md-6  col-sm-8  col-xs-12">
 				<tbody >															
 								
 
@@ -652,16 +602,6 @@ text-align: center;
 	
 
 
-	<script type="text/javascript">
-    $(document).ready(function(){
-      $('.slider').slick({
-      	dots : true,
-      	speed: 1000,
-      	autoplay: true
-      });
-    });
-  </script>
-
 
 	<!-- jQuery -->
 	<!-- <script src="js/jquery.min.js"></script> -->
@@ -685,64 +625,18 @@ text-align: center;
 	<script type="text/javascript" src="js/scripts.js"></script>
 	<script src="css/slick.min.js"></script> 
 
-	<!-- Google Map -->
-	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script> -->
-	<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false">
-	</script>
-
-
-
-	<script src="js/google_map.js"></script>
-
 	<!-- For demo purposes only styleswitcher ( You may delete this anytime ) -->
 	<script src="js/jquery.style.switcher.js"></script>
 	  <script defer src="js/jquery.flexslider.js"></script>
 
   <script defer src="js/demo.js"></script>
-	<script>
-		$(function(){
-			$('#colour-variations ul').styleSwitcher({
-				defaultThemeId: 'theme-switch',
-				hasPreview: false,
-				cookie: {
-		          	expires: 30,
-		          	isManagingLoad: true
-		      	}
-			});	
-			$('.option-toggle').click(function() {
-				$('#colour-variations').toggleClass('sleep');
-			});
-		});
-	</script>
+	
 	<!-- End demo purposes only -->
 
 	<!-- Main JS (Do not remove) -->
 	<script src="js/main.js"></script>
 
   
-
-	<script type="text/javascript">
-    $(function(){
-      SyntaxHighlighter.all();
-    });
-    $(window).load(function(){
-      $('.flexslider').flexslider({
-        animation: "slide",
-        controlsContainer: $(".custom-controls-container"),
-        customDirectionNav: $(".custom-navigation a"),
-        start: function(slider){
-          $('body').removeClass('loading');
-        }
-      });
-    });
-  </script>
-  
-  <script type="text/javascript">
-  	$(document).ready(function() {
-    $('.data').slick();
-	});
-  </script>
-
 	</body>
 </html>
 
