--- a/index.html
+++ b/index.html
@@ -119,6 +119,18 @@
 
 </head>
 <body>
+
+<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.12';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
+
+
+
 	<section>
 		<div class="" style="background: #00a7a3; height:50px;">
 			<div class="container">
@@ -716,7 +728,8 @@
 				<figure>
 						<img  src="images/evento.jpg"  class="img-responsive" style="display:block; margin:auto;">
 				</figure>
-			</div>			
+			</div>	
+			<div class="fb-comments" data-href="https://siminchikkunarayku.pe/" data-width="100%" data-numposts="5"></div>
 		</div>		
 </section>
 
@@ -834,6 +847,17 @@
 		</div>
 	</footer>
 	
+	
+	
+	<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = 'https://connect.facebook.net/es_LA/sdk.js#xfbml=1&version=v2.12';
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));
+</script>
+	
 	<!-- popup -->
 
 	<div class="bts-popup " role="alert">
@@ -892,7 +916,8 @@
   
  </script> 
  <!--end popup--->
-	
+ 
+
 	<script>
           $("#form").validator().on("submit", function (event) {
 			if (event.isDefaultPrevented()) {
